elb.tf
resource "aws_lb" "this" {
  count = length(var.instance_name) == 0 ? 0 : 1

  name               = "test-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.public_ec3_sg[count.index].id]
  subnets            = slice(data.aws_subnets.available.ids, 0, 3)

  enable_deletion_protection = false

  
  depends_on = [aws_instance.public_ec3]

  tags = {
    Environment = "GitOps"
  }
}

resource "aws_lb_target_group" "this" {
  count = length(var.instance_name) == 0 ? 0 : 1

  name        = "nginx-tg"
  port        = 80
  protocol    = "HTTP"
  #target_type = "ip"
  vpc_id      = var.vpc_id
  depends_on = [aws_instance.public_ec3]
}

locals {
  instance_ids = {
    for k, v in aws_instance.public_ec3 :
    k => v.id
  }
}

resource "aws_lb_target_group_attachment" "this" {
  for_each = local.instance_ids

  target_group_arn = aws_lb_target_group.this[0].arn
  target_id        = each.value
  port             = 80

  depends_on = [aws_instance.public_ec3]
}

resource "aws_lb_listener" "this" {
  count = length(var.instance_name) == 0 ? 0 : 1

  load_balancer_arn = aws_lb.this[count.index].arn
  port              = "80"
  protocol          = "HTTP"
  # ssl_policy        = "ELBSecurityPolicy-2016-08"
  # certificate_arn   = "arn:aws:iam::187416307283:server-certificate/test_cert_rab3wuqwgja25ct3n4jdj2tzu4"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this[count.index].arn
  }
  depends_on = [aws_instance.public_ec3]
}
